--- a/bindu.tex
+++ b/bindu.tex
@@ -193,7 +193,7 @@ Herstellung: \ \ BoD – Books on Demand GmbH, Norderstedt  \\
         \rdg[wit={N1}]{śrī gaṇeśāya namaḥ || śrī gurave namaḥ ||}
         \rdg[wit={D}]{śrī gaṇeśāya namaḥ || śrī sarasvatyai namaḥ || śrī nirañjanāya namaḥ ||}
         \rdg[wit={U1}]{śrī gaṇeśāya namaḥ || oṃ śrī niraṃjanāya ||}}\dd{}
-\app{\lem[wit={N1,N2,D}]{atha rājayogaprakāro likhyate}
+\app{\lem[wit={D,N1,N2}]{atha rājayogaprakāro likhyate}
         \rdg[wit={U1}]{atha rājayogaprakāra likhyate}
         \rdg[wit={E}]{rājayogāntargataḥ || binduyogaḥ}
         \rdg[wit={L}]{atha tattvabiṃduyogaprāraṃbhaḥ}
@@ -211,7 +211,7 @@ Herstellung: \ \ BoD – Books on Demand GmbH, Norderstedt  \\
 % rājayogasyedaṃ phalaṃ /    \U2
 %--------------------------    
 \app{\lem[wit={P,U2}]{rājayogasyedaṃ phalaṃ}
-  \rdg[wit={N1,N2,D}]{rājayogasya idaṃ phalaṃ}
+  \rdg[wit={D,N1,N2}]{rājayogasya idaṃ phalaṃ}
   \rdg[wit={E,L}]{\om}}
 %--------------------------
 %This is the result of \textit{rājayoga}:
@@ -1661,7 +1661,7 @@ type=section,
 \label{cakra3trans}
     \begin{tlate}[p06_01]
       \noindent
-      \begin{euber}[f04_2]\blfootnote{\hspace{-2.2em}Uḍḍiyāna is probably situated in the Swat Valley in modern Pakistan. See \citeauthor[2007:265-269]{sandersonshaivaexe} for a detailed term discussion. Throughout the text corpus of Haṭhayoga, the \textit{pīṭha}s are repeatedly located differently in the yogic body. Additionally, the term refers to a certain yogic technique classified as \textit{mudrā} and termed \textit{uḍḍiyānabandha} which usually involves a specific type of muscular contraction around the location of the navel. For a detailled discussion of practice see \citeauthor[2017: pp. 228-258]{rootsofyoga2017}. Depending on the text and tradition, there are different models of how and in which context and with what kind of result practitioners perform the practice.}\end{euber}[f04_2] The third, a ten-petalled lotus, exists at the location of the navel. \extra{The color is red. Viṣṇu is the deity. Lakṣmī is the power. \begin{otherlanguage}{english}\textbf{\Large{\sic*{}}}\end{otherlanguage}Āyu\begin{otherlanguage}{english}\textbf{\Large{\sic*{}}}\end{otherlanguage} is the seer. Samāna is the vitalwind. Garuḍa is the mount. The subtle body is the body. Sleep is the state. Madhyamā is the speech. Yajur is the Veda. The southern [fire] is the fire. Samīpatā is the liberation. Viṣṇu is the \textit{guruliṅga}\footnote{For the phallus of Śiva, considered as one’s teacher or guide, cf. \citetitle{shivapura} 1.18.31.}. Water is the principle. Taste is the sense object. There are ten petals [and] ten Mātṛkas. [The] internal syllables [are]: \textit{ḍaṃ ṭaṃ ṇaṃ taṃ thaṃ daṃ dhaṃ naṃ paṃ phaṃ}. The external mother goddesses [are]: Śānti, Kṣamā, Medhā, Tanayā, Medhavinī, Puṣkarā, Haṃsagamanā, Lakṣyā, Tanmayā and Amṛtā. A thousandfold recitation of the non-recited; 6000; 16 \textit{ghaṭi}s [and] 40 \textit{pala}s\footnote{Thus, the prescribed duration for meditation on this \textit{cakra} is six hours and fourty minutes.}.} In its middle exists a \textit{cakra} with five angles. In the middle of it is a single form. It is not possible to describe the splendour of it with speech. Through the execution of meditation on this form, the body of the person becomes durable\footnote{The source text specifies this bodily durability as a long lifespan (\textit{cirāyuḥ}) and freedom from diseases (\textit{aroga}).}.\footnote{In comparison to the previous \textit{svādhiṣṭhānacakraṃ} this \textit{cakra} at the navel is not associated with a \textit{guṇa}, a \textit{dhāraṇā}, a \textit{prabhā} and a \textit{mudrā}.}  
+      \begin{euber}[f04_2]\blfootnote{\hspace{-2.2em}Uḍḍiyāna is probably situated in the Swat Valley in modern Pakistan. See \citeauthor[2007:265-269]{sandersonshaivaexe} for a detailed term discussion. Throughout the text corpus of Haṭhayoga, the \textit{pīṭha}s are repeatedly located differently in the yogic body. Additionally, the term refers to a certain yogic technique classified as \textit{mudrā} and termed \textit{uḍḍiyānabandha} which usually involves a specific type of muscular contraction around the location of the navel. For a detailled discussion of practice see \citeauthor[2017: pp. 228-258]{rootsofyoga2017}. Depending on the text and tradition, there are different models of how and in which context and with what kind of result practitioners perform the practice.}\end{euber} The third, a ten-petalled lotus, exists at the location of the navel. \extra{The color is red. Viṣṇu is the deity. Lakṣmī is the power. \begin{otherlanguage}{english}\textbf{\Large{\sic*{}}}\end{otherlanguage}Āyu\begin{otherlanguage}{english}\textbf{\Large{\sic*{}}}\end{otherlanguage} is the seer. Samāna is the vitalwind. Garuḍa is the mount. The subtle body is the body. Sleep is the state. Madhyamā is the speech. Yajur is the Veda. The southern [fire] is the fire. Samīpatā is the liberation. Viṣṇu is the \textit{guruliṅga}\footnote{For the phallus of Śiva, considered as one’s teacher or guide, cf. \citetitle{shivapura} 1.18.31.}. Water is the principle. Taste is the sense object. There are ten petals [and] ten Mātṛkas. [The] internal syllables [are]: \textit{ḍaṃ ṭaṃ ṇaṃ taṃ thaṃ daṃ dhaṃ naṃ paṃ phaṃ}. The external mother goddesses [are]: Śānti, Kṣamā, Medhā, Tanayā, Medhavinī, Puṣkarā, Haṃsagamanā, Lakṣyā, Tanmayā and Amṛtā. A thousandfold recitation of the non-recited; 6000; 16 \textit{ghaṭi}s [and] 40 \textit{pala}s\footnote{Thus, the prescribed duration for meditation on this \textit{cakra} is six hours and fourty minutes.}.} In its middle exists a \textit{cakra} with five angles. In the middle of it is a single form. It is not possible to describe the splendour of it with speech. Through the execution of meditation on this form, the body of the person becomes durable\footnote{The source text specifies this bodily durability as a long lifespan (\textit{cirāyuḥ}) and freedom from diseases (\textit{aroga}).}.\footnote{In comparison to the previous \textit{svādhiṣṭhānacakraṃ} this \textit{cakra} at the navel is not associated with a \textit{guṇa}, a \textit{dhāraṇā}, a \textit{prabhā} and a \textit{mudrā}.}  
 \flushpage 
 \end{tlate}
   \end{translation}
@@ -2667,8 +2667,9 @@ dhyānakaraṇāt tasya samīpe maraṇaṃ
                    \label{cakra7trans}
                    \xmlhead[h10]{[X. Cakra within the Palate]}
                      \begin{tlate}[p10_01]
-Now, the seventh \textit{cakra}, having sixty-four petals [and] being full of nectar, exists in the middle of the palate\footnote{It is noteworthy that the \textit{cakra} located at the palate is positioned before the \textit{ājñācakra} situated between the eyebrows, disrupting the conventional ascending order. Rāmacandra's choice to adopt this sequence from the \textit{Yogasvarodaya} stands out, as no other text expounding a ninefold \textit{cakra} system adheres to this arrangement. For a comprehensive overview, please refer to table 19 in the work by \citeauthor[2023:214]{shivayogapradipika}. Nevertheless, it is imperative to underscore that Rāmacandra revises this order in section \uproman{29} on page \pageref{cakranukrama}. In this section, he enumerates the names of the nine \textit{cakras} and their technical designations without further elaboration or details. The distinction, however, lies in the fact that this time Rāmacandra borrows from the \citetitle{ssplonavla}, which orders the \textit{tālucakra} ahead of the \textit{ājñācakra}.} \extra{\crazy{The forehead is the Maṇḍala.} The moon is the deity. The nectar of immortality is the power. The supreme self is the Rṣi. \crazy{The seventeenth digit is the resident with the nectar of immortality. The wavy stream of nectar is the great space. The uvula is the mother. The ornament/rhythm? (\textit{tālikā}) is a small bell. The own form of the body is the unspeakable Gāyatrī, [which has] the face of a crow, the eye of a human, the horn of a cow, a forehead that is Brahmapaṭhā?, a neck like a horse, the face of a peacock [and] limbs like a goose. [This is] the specific nature of the unspeakable Gayatrī.}}
-[It is] endowed with superabundant beauty. [It is] very bright. In its middle is that which is known as uvula (\textit{ghāṃṭikā})\footnote{The uvula as a pathway of the ascend of breath, \textit{mantra} and self between the fifth and the sixth \textit{cakra} can already be identified within the sixfold \textit{cakra}-system of \citetitle{kubji1988} 7.85: (\textit{lalanāghaṇṭike yojya pañcamaṃ sthānam ākramet | ākramed guhyacakraṃ tu karaṇaṃ cordhvamūlakam ||})} being red in colour. [It] exists as a single pericarp. In its middle is a site. In the middle of it exists the hidden digit of the moon, being a stream of nectar like a river (\textit{amṛtādhārāsravantī}). Because of the exercise of meditation on this digit, death does not reach him. Due to uninterrupted meditation, the stream (\textit{dhārā}) of nectar flows.
+Now, the seventh \textit{cakra}, having sixty-four petals [and] being full of nectar, exists in the middle of the palate\footnote{It is noteworthy that the \textit{cakra} located at the palate is positioned before the \textit{ājñācakra} situated between the eyebrows, disrupting the conventional ascending order. Rāmacandra's choice to adopt this sequence from the \textit{Yogasvarodaya} stands out, as no other text expounding a ninefold \textit{cakra} system adheres to this arrangement. For a comprehensive overview, please refer to table 19 in the work by \citeauthor[2023:214]{shivayogapradipika}. Nevertheless, it is imperative to underscore that Rāmacandra revises this order in section \uproman{29} on page \pageref{cakranukrama}. In this section, he enumerates the names of the nine \textit{cakra}s and their technical designations without further elaboration or details. The distinction, however, lies in the fact that this time Rāmacandra borrows from the \citetitle{ssplonavla}, which orders the \textit{tālucakra} ahead of the \textit{ājñācakra}.} \extra{\crazy{The forehead is the Maṇḍala.} The moon is the deity. The nectar of immortality is the power. The supreme self is the Rṣi. \crazy{The seventeenth digit is the resident with the nectar of immortality. The wavy stream of nectar is the great space. The uvula is the mother. The ornament/rhythm? (\textit{tālikā}) is a small bell. The own form of the body is the unspeakable Gāyatrī, [which has] the face of a crow, the eye of a human, the horn of a cow, a forehead that is Brahmapaṭhā?, a neck like a horse, the face of a peacock [and] limbs like a goose. [This is] the specific nature of the unspeakable Gayatrī.}}
+[It is] endowed with superabundant beauty. [It is] very bright. In its middle is that which is known as uvula (\textit{ghāṃṭikā})\footnote{The uvula as a pathway of the ascend of breath, \textit{mantra} and self between the fifth and the sixth \textit{cakra} can already be identified within the sixfold \textit{cakra}-system of \citetitle{kubji1988} 7.85: (\textit{lalanāghaṇṭike yojya pañcamaṃ sthānam ākramet | ākramed guhyacakraṃ tu karaṇaṃ cordhvamūlakam ||}).} being red in colour. [It] exists as a single pericarp. In its middle is a site. In the middle of it exists the hidden digit of the moon, being a stream of nectar like a river (\textit{amṛtādhārāsravantī}). Because of the exercise of meditation on this digit, death does not reach him. Due to uninterrupted meditation, the stream (\textit{dhārā}) of nectar flows.
+\flushpage.
     \end{tlate}
   \end{translation}
 \end{alignment}
@@ -4454,8 +4455,8 @@ sthiro bhavati/
       \noindent
 \begin{euber}[f14_1]\blfootnote{\hspace{-2.2em}(\textit{ākāśaṃ vimalam paśyan kṛtvā dṛṣṭiṃ nirantarām | stabdhātmā tatkṣaṇād devi bhairavaṃ vapur āpnuyāt} ||) Although the term \textit{lakṣya} is not used, the central elements of the practice are found here: the gaze is constantly fixed on the sky, establishing a connection with the divine.}\end{euber}
     Now, the downward-directed target. One should stabilize the gaze within the circumference (\textit{paryanta}) of twelve \textit{aṅgula}s beyond the nose. Alternatively, one should stabilize the gaze onto the tip of the nose. The target becomes stable due to firm exercise [on one] of the twofold targets. The breath becomes stable. Vitality increases.\footnote{In Sundardās's \citetitle{sarvangayoga} 2.26 (Ed. p. 104), one finds the following verse with a very similar concept:(\textit{prathamahīṃ adho lakṣa kauṃ jānaiṃ | nāśā agra dṛṣṭi sthira ānaiṃ} | \textit{yātoṃ mana pavanā thira hoī | adho lakṣa jo sādhai koī} || 26 ||) He shares the technique of fixing the gaze onto the nose and the notion of the breath becoming stabilized.}\footnote{Sundaradeva, in his \citetitle{hathasamketacandrikachennai} (passage reconstructed from ORI B220, GOML R3239, HSC 2244) adds the following alternative techniques at this point of his text: (\textit{athavā dṛṣṭir netrayor dvayor netrā 'dhobhāgayor akṣikūṭayos tad adhogallayor ūbhayor upari sthirā kartavyā | ekānte vijane dīpam āvarake saṃsthāpya ciraṃ gatvāvalokyastheyaṃ | ghaṭīmātraṃ vā ghaṭikārdhaṃ vā tato dīpam ācchādya bhūmau sarvatrāvalokane sarvaṃ śvetanīlapītasphuliṅgakaṇāṃ 'te maṇḍalākāriṇiś ceta jyotiścakrāṇi pañcaṣaṭ vā dṛśyante | tataś cāndhakāre dṛśyate | dīptamatsarvaṃ svaśarīraṃ dṛśyate bhāsate sarvo'pi sapradeśo dīptimān sphuṭo dṛśyate | etad ārḍye jyotir mayacakrāṃte parameśvarasya tejomūrtir dṛśyate | puṃsaḥ paramānandotpattir jāyate | svadehavismṛtiś ca saṃbhavati | athavā svanetrayor vartmanīr dakṣahastamadhyamātarjanībhyām akṣi kūṭayor adhaḥ kṛtvā akṣivartmani dṛḍhaṃ cālanī ye ghaṭikārdhaṃ cā ghaṭīmātraṃ tata evaṃ kṛte sādhyakasyāgre suśvetajyotiḥ prākāśaḥ prāg bhavatīti |})}
-This pair is also taught as an external target.\footnote{This statement associates the two practices of \textit{adholakṣya} with \textit{bāhyalakṣya}, which is described later on in the text. Indeed, these later descriptions instruct the practitioner to target one of the five elements at various distances in front of the nose or above the head (cf. p. \pageref{bahya2}).} The target of emptiness shall be executed internally and externally like space.\footnote{This description undoubtedly derives from the \textit{Yogasvarodaya} as quoted in the \citetitle{ramatosana} (Ed. p. 834), where it is declared a practice of \textit{antaralakṣ(y)a}.} The fear of dying does not arise due to the exercise of meditation on the void at all places during one's life - while eating, moving and waking.\footnote{The concept of five \textit{lakṣ(y)a}s appears only in the lost \textit{Yogasvarodaya} and from there made its way into \citetitle{ramatosana}, \citetitle{yogakarnika} and \textit{Yogatattvabindu}. The other texts including it are \citetitle{sarvangayoga}, \citetitle{hathasamketacandrikamysore} and \citetitle{yogacandrika}. In all those texts, this practice becomes a genuine yoga: Lakṣ(y)yoga. If one encounters the concept of three \textit{lakṣ(y)a} as found in \citetitle{netratantra} (cf. 7.1), \citetitle{shivayogapradipika} (cf. 4.36-50) and Yoga Upaniṣads such as\citetitle{mandalabrah} (cf. 2.6-2.14) or \citetitle{advaya} (Ed. pp. 3-5) it is never declared as an own type of yoga.}
-    %\flushpage 
+This pair is also taught as an external target.\footnote{This statement associates the two practices of \textit{adholakṣya} with \textit{bāhyalakṣya}, which is described later on in the text. Indeed, these later descriptions instruct the practitioner to target one of the five elements at various distances in front of the nose or above the head (cf. p. \pageref{bahya2}).} The target of emptiness shall be executed internally and externally like space.\footnote{This description undoubtedly derives from the \textit{Yogasvarodaya} as quoted in the \citetitle{ramatosana} (Ed. p. 834), where it is declared a practice of \textit{antaralakṣ(y)a}.} The fear of dying does not arise due to the exercise of meditation on the void at all places during one's life - while eating, moving and waking.\footnote{The concept of five \textit{lakṣ(y)a}s appears only in the lost \textit{Yogasvarodaya} and from there made its way into \citetitle{ramatosana}, \citetitle{yogakarnika} and \textit{Yogatattvabindu}. The other texts including it are \citetitle{sarvangayoga}, \citetitle{hathasamketacandrikamysore} and \citetitle{yogacandrika}. In those texts, this practice becomes a genuine yoga: Lakṣ(y)yoga. If one encounters the concept of three \textit{lakṣ(y)a} as found in \citetitle{netratantra} (cf. 7.1), \citetitle{shivayogapradipika} (cf. 4.36-50), \citetitle{mandalabrah} (cf. 2.6-2.14) or \citetitle{advaya} (Ed. pp. 3-5) it is never declared as an own type of yoga.}
+    \flushpage 
     \end{tlate}
   \end{translation}
 \end{alignment}
@@ -4499,7 +4500,7 @@ This pair is also taught as an external target.\footnote{This statement associat
                      n=XVI
                    }
            \xmlhead[h16]{[XVI. rājayogayuktasya puruṣasya yaccharīracihnam]}
-                  abel{rajabody}
+                  \label{rajabody}
                       \begin{prose}[p16_01]
       \noindent
 %------------------------------  
@@ -5438,8 +5439,7 @@ pūrṇaṃ
 \app{\lem[wit={ceteri}]{vā}
   \rdg[wit={P,U2}]{vāṃ}
   \rdg[wit={U1}]{\om}}
-na bhavati/ so
-\app{\lem[type=emendation, resp=egoscr]{'pi}
+na bhavati/ so\app{\lem[type=emendation, resp=egoscr]{'pi}
   \rdg[wit={ceteri}]{pi}}
 \app{\lem[wit={ceteri}]{rājayogaḥ}
   \rdg[wit={E}]{rājayogaḥ kathyate}}\dd{}
@@ -15535,7 +15535,7 @@ evaṃ
 \begin{translation}
     \begin{tlate}[p47_02]
       \noindent
-      For thus, immediately after the light of the self [arises], the upward-facing [one] blooms. Within it, the place having the form of the highest bliss arises. The technical designation of it is "I am he, he is I". Because of meditation on the own self, which exists within it\footnote{Probably within the lotus.}, the force of life is caused to grow day by day. Diseases are remote. \crazy{\textbf{\Large{\sic{\ldots}}}}\footnote{It is not possible to make sense of the Sanskrit based on what is handed down in the manuscripts of the \textit{Yogatattvabindu}. However, we have to assume that the passage probably tries to express what was written in the source text \textit{Yogasvarodaya} (\textit{Prāṇatoṣiṇī} p. 845): \textit{śaktiprasannatā syāc ca rogaśokavivarjitaḥ | yasya mudrābhyāsaśālī samyak siddhā ca  khecarī |}. ``Purificaton of the energy and freedom from diseases arises for one who is abundantly enganged in the practice of Mudrā. He is truly becomes a Siddha and a Sky-roamer.''} The non-duality consisting of bliss and consciousness is consciousness endowed with illumination. The highest self, the great sun [and] the mass of rays of the sun is the light. Both bliss and light shall be brought into unity uninterruptedly. The own fire is the great light that illumines the highest place. The constantly active mind being the moon, perceives how the sun rises. Because of this, the mind, which is the moon, is devoured, although it disappears in its own place. The place, however, made of digits, is devoured by the sun, the great fire. Thus, there is an agreement between the fires and the beams of the moon with the highest reality.\footnote{https://en.wikipedia.org/wiki/Kaula_(Hinduism) The Heart, Aham, the heart or "subjective I", is a central concept in Kaula ideology, conceived of as the most sacred reality, home of consciousness (Cit) and bliss (Ananda), place of union of the cosmic couple Shiva and Shakti. The term Aham refers to the same reality as other terms like anuttara (unsurpassed), Akula (beyond the group), Shiva (The Lord), Cit (supreme consciousness) as well as "feminine" aspects as Ananda and Shakti. Each term brings a specific viewpoint, but none of them can fully describe the Supreme Reality. On the individual level, the heart is the binding force of all conscious experiences – the individual being is considered a Kula composed of eight elements: five senses, ego (ahamkar), the mind and the intellect. These eight are not disconnected, unrelated processes but rather a unified, interrelated family ("kaula") based on consciousness as the common substrate.[30] Kaula prescribes practices that reintegrate the eight "rays" of the soul into the supreme consciousness. On the cosmic level, the "Heart of the Lord" (aham) is the substrate of the family of 36 elements forming all manifestation. The concept of "Spiritual Heart" is so important that even the supreme realization in Kashmir Shaivism is described in relation to it. The Khechari Mudra is an attitude described as "the ability of consciousness to freely move (charati) about in the space (kha) of the heart".[31] ("kha"+"charati" forming "kechari").}
+      For thus, immediately after the light of the self [arises], the upward-facing [one] blooms. Within it, the place having the form of the highest bliss arises. The technical designation of it is "I am he, he is I". Because of meditation on the own self, which exists within it\footnote{Probably within the lotus.}, the force of life is caused to grow day by day. Diseases are remote. \crazy{\textbf{\Large{\sic{\ldots}}}}\footnote{It is not possible to make sense of the Sanskrit based on what is handed down in the manuscripts of the \textit{Yogatattvabindu}. However, we have to assume that the passage probably tries to express what was written in the source text \textit{Yogasvarodaya} (\textit{Prāṇatoṣiṇī} p. 845): \textit{śaktiprasannatā syāc ca rogaśokavivarjitaḥ | yasya mudrābhyāsaśālī samyak siddhā ca  khecarī |}. ``Purificaton of the energy and freedom from diseases arises for one who is abundantly enganged in the practice of Mudrā. He is truly becomes a Siddha and a Sky-roamer.''} The non-duality consisting of bliss and consciousness is consciousness endowed with illumination. The highest self, the great sun [and] the mass of rays of the sun is the light. Both bliss and light shall be brought into unity uninterruptedly. The own fire is the great light that illumines the highest place. The constantly active mind being the moon, perceives how the sun rises. Because of this, the mind, which is the moon, is devoured, although it disappears in its own place. The place, however, made of digits, is devoured by the sun, the great fire. Thus, there is an agreement between the fires and the beams of the moon with the highest reality.%\footnote{https://en.wikipedia.org/wiki/Kaula_(Hinduism) The Heart, Aham, the heart or "subjective I", is a central concept in Kaula ideology, conceived of as the most sacred reality, home of consciousness (Cit) and bliss (Ananda), place of union of the cosmic couple Shiva and Shakti. The term Aham refers to the same reality as other terms like anuttara (unsurpassed), Akula (beyond the group), Shiva (The Lord), Cit (supreme consciousness) as well as "feminine" aspects as Ananda and Shakti. Each term brings a specific viewpoint, but none of them can fully describe the Supreme Reality. On the individual level, the heart is the binding force of all conscious experiences – the individual being is considered a Kula composed of eight elements: five senses, ego (ahamkar), the mind and the intellect. These eight are not disconnected, unrelated processes but rather a unified, interrelated family ("kaula") based on consciousness as the common substrate.[30] Kaula prescribes practices that reintegrate the eight "rays" of the soul into the supreme consciousness. On the cosmic level, the "Heart of the Lord" (aham) is the substrate of the family of 36 elements forming all manifestation. The concept of "Spiritual Heart" is so important that even the supreme realization in Kashmir Shaivism is described in relation to it. The Khechari Mudra is an attitude described as "the ability of consciousness to freely move (charati) about in the space (kha) of the heart".[31] ("kha"+"charati" forming "kechari").}
       \flushpage
 \end{tlate}
   \end{translation}
@@ -16068,7 +16068,7 @@ vyāpakatvaṃ\dd{}
       \noindent
   Now, through the accomplishment of yoga, such knowledge arises:\\
 \end{tlate}
-\begin{tlate}{48_1]
+\begin{tlate}[48_1]
      \paragraph{\uproman{48}.1} When the creator himself, the cause, the "Kula (Śakti) and Akula (Śiva)", did not exist, then the unmanifest\footnote{See \citeauthor{peterson1888} 4271.}, the supreme reality (\textit{paraṃ tattvam}), the nameless one, existed.\footnote{As in SSP this verse marks the beginning of a longer description of cosmography. Rāmacandra follows the SSP but reduces, reorganises, simplifies and modifies the contents.}\\
    \end{tlate}
    \begin{tlate}[p48_02]
@@ -20509,7 +20509,7 @@ sarvadā\dd{} \begin{otherlanguage}{english}\uproman{58}.6\end{otherlanguage}\hs
 \begin{tlate}[58_6]
   \paragraph{\uproman{58}.6} He who has arisen to the awakening of reality, who is in every way equanimous does not become tainted by sin going amidst people and engaging in contact.
   \end{tlate}
-%\flushpage 
+\flushpage 
   \end{translation}
 \end{alignment}
 \pagebreak %after pp. 143-144
@@ -21125,7 +21125,6 @@ I consider it necessary to emend the title of the work to \textit{Yogatattvabind
     \end{tlate}
   \end{translation}
 \end{alignment}
-
 \chapter{Appendix}
 \section{Figures}
 
