--- a/bindu.bib
+++ b/bindu.bib
@@ -8,6 +8,16 @@
  keywords={printed},
 }
 
+﻿@book{brunner1963, 
+ title={Somaśambhupaddhati},
+ subtitle={Texte, trad. et notes par Hélène Brunner-Lachaux. 4 parties.}, 
+ year={1963},
+ series={Publications de l’Institut français d’Indologie; Publications du Départment d’Indologie.}, 
+ volume={25},
+ address={Pondichéry},
+ keywords={printed},
+}
+
 @book{samgitaratna, 
  title={Saṃgītaratnākara},
  subtitle={Saṃgītaratnākara of Śārṅgadeva: with the Kalānidhi of Kallinātha and the Sudhākara of Siṃhabhūpāla},
