--- a/voredition.tex
+++ b/voredition.tex
@@ -95,6 +95,70 @@ Thousands of crores of resonances and hundreds of crores of visual focal points,
 
 \citetitle{hathapradipika2024}
 
+\chapter{Rāmacandra's Audience}
+
+atha rājayogaḥ || yogasvarodaye | īśvara uvāca |
+rājayogaṃ pravakṣyāmi śṛṇu sarvatra siddhidam |
+guhyād guhyataraṃ devi nānādharmaṃ parāt param |
+rājayogena deveśi nṛpapūjyo bhaven naraḥ |
+rājayogī cirāyuś ca aṣṭaiśvaryamayo bhavet ||
+
+„Alsdann Rājayoga. Im Yogasvarodaya. Gott sprach:
+Ich werde den Rājayoga verkünden, der in jedem Fall Vollkommenheit verleiht, höre zu!
+Geheimnisvoller als das Geheimste, oh Göttin, viele gute Eigenschaften, höher als das höchste. 
+Durch Rājayoga würde der Mensch einer sein, der zu verehren ist, wie ein König,(oder der von Königen zu verehren ist) oh Göttin der
+Götter! Der Rājayogin wird ein langes Leben haben und mit den acht übernatürlichen Kräften
+ausgestatett sein.“
+
+
+%%%%%%%%%%%
+%%%%%%%%%%%
+%%%%%%%%%%%
+%%%%%%%%%%%
+%%%%%%%%%%%
+%%%%%%%%%%%
+
+König Someśvaras Werk Mānasollāsa ("Erfrischung des Geistes") aus dem 12. Jahrhundert über
+die Erziehung junger Prinzen:
+„After performing the \textbf{Upanayana} ceremony in the eighth or eleventh year, the prince should be taught in
+one of the Vedas, the use of weapons and various sciences. ...They are required to be trained by experts
+and repeatedly examined by experts. When the king is pleased with the progress of the princes, he
+should embrace them and honour them with sweet words and presents, and the teachers should be
+presented with cows, towns or even villages. After educating the princes properly, the king should get
+them married.“
+(Shrigondekar 1939:20)
+
+HIER WICHTIG KOLLOQUIUM: Max schlägt vor, dass ich mein Argument ans Ende der Beobachtungen Stelle und zwar als Vorschlag die Beobachtungen einzuordnen und nicht den Vorschlag voran.!!!
+
+
+%%%%%%%
+%%%%%%%
+%%%%%%
+
+Laut Birch 2014 nur zwei Texte, welche die Konnotation von Rājayoga als „der für Könige geeignete Yoga“ haben:
+–
+Rājayogabhāṣya:
+rājayogaḥ rājña upayukto yogas tathocyate |
+„Der königliche Yoga, so wird gesagt, ist der Yoga der vom König angewendet wird."
+–
+Divākaras Kommentar zu Bodhasāra:
+... rājayogo rājñāṃ nṛpāṇāṃ svasthāne \emph{sthitvāpi} sādhayituṃ śakyatvāt tatsambandhī yogo
+jīvabrahmaikyaviṣayakajñānalakṣaṇo ...
+„Rājayoga ist das Yoga für Könige, weil Herrscher in der Lage sind es zu Stande zu bringen selbst wenn sie in ihrer Position
+(als Könige) bleiben. In diesem Zusammenhang ist sein [Haupt-]Merkmal das Wissen über die Vereinigung des
+individuellen Selbst mit Brahman“
+● Śivatattvaratnākara
+● Netratantra
+
+
+%%%%%%%
+%%%%%%%
+%%%%%%%
+ganz wichtig: Im Kolloquium war Jürgen überzeugt! (was sehr gut ist), Steiner und die Studi's eher unschlüssig und Stanislav nicht überzeugt ohne den Rest des Textes zu kennen. 
+Es ist sehr wichtig in der Argumentation zwar zu versuchen zu überzeugen, aber dennoch die eine Ausweichmöglichkeit zu lassen. Zumindest kann man sich darauf einstellen, dass dieses Thema kontrovers diskutiert wird.
+
+,,, oh kooler Begriff: Rāmacandra war ein Proto-Krishnamacharya ... :D 
+
 \chapter{The List of the 15 Yogas}
 \label{yogas_list}
 The authenticity of the list specifying the fifteen Yogas at the beginning of the text is ambiguous. This is due to the discrepancy between the structure of the Yogas presented in the text and the order presented in the list. For example, the text commences with a description of \textit{kriyāyoga} and goes on to describe \textit{siddhakuṇḍaliniyoga} and then mentions \textit{mantrayoga} without adhering to the order presented in the list. This incongruity raises questions as to why the text structure deviates from the list. However, the reference to \textit{jñānotpattav upāyaḥ} may provide some insight into why \textit{jñānayoga} is included as the second \textit{yoga} in the list. To reconcile these apparent inconsistencies, there are several possible explanations: 1) The text is severely corrupted. 2) The list was added by a different hand at a later time. 3) The term \textit{jñānayoga} is included as a result of the practice of \textit{siddhakuṇḍalinīyoga}, which is said to generate knowledge through the central channel, as stated in the text. These explanations may be combined to provide a comprehensive understanding of the situation.
