improved edition until cakra system

--- a/bindu.bib
+++ b/bindu.bib
@@ -1,4 +1,30 @@
-﻿@book{pratyabhijnahrdaya, 
+﻿@inbook{kaviraj,
+  author      = {Kavirāj, Gopīnāth},
+  title       = {The system of cakras according to Gorakṣanātha},
+  editor      = {Sastri, Gaurinath},
+  booktitle   = {Notes on Religion and Philosophy},
+  publisher   = {Sampurnanand Sanskrit University},
+  series      = {The Princess of Wales Sarasvati Bhavana Studies},
+  volume      = {3}, 
+  year        = {1987},
+  pages       = {47-55},
+  address     = {Varanasi},
+  keywords    = {seclit},
+}
+
+@book{haasgayatri, 
+ author={Haas, Dominik A.}, 
+ title={Gāyatrī}, 
+ subtitle={Mantra and Mother of the Vedas},
+ year={2023},
+ series={Beiträge zur Kultur- und Geistesgeschichte Asiens}, 
+ volume={110},
+ publisher={Institut für Kultur- und Geistesgeschichte Asiens}, 
+ address={Vienna},
+ keywords={seclit},
+}  
+
+@book{pratyabhijnahrdaya, 
  title={Pratyabhijñāhṛdayam},
  subtitle={The secret of recognition}, 
  year={1987},
@@ -224,6 +250,7 @@ address={Lonavla},
  address={Calcutta},
  keywords={printsource},
  }
+
 
 @book{sivasvarodaya,
   title={Śivasvarodaya},
@@ -459,6 +486,16 @@ keywords={printsource},
   year={1983},
   publisher={Motilal Banarsidass},
   address={New Dehli},
+  keywords={printsource},
+}
+
+@book{kaviraj,
+  title={Jogpradīpyakā}, 
+  subtitle={Jogpradīpyakā of Jayatarāma},
+  author={Maheśānanda, Swāmi and Sharma, Dr. B. R. and Sahay, Shri G. S. and Bodhe, Shri R. K.},
+  year={2006},
+  publisher={Kaivalyadhāma S. M. Y. M. Samiti},
+  address={Lonavla},
   keywords={printsource},
 }
 
@@ -1589,10 +1626,21 @@ address={Pondicherry},
  keywords= {seclit},
 }
 
+@book{padoux1994,
+author={Padoux, André},
+title={Yoginīhṛdaya}, 
+subtitle={La Coer de la Yoginī. Yoginīhṛdaya, avec le commentaire Dīpikā d'Amṛtānanda. Texte samskrit traduit et annoté.}, 
+year={1994}, 
+publisher={Publications de l'Institut de civilisation indienne}, 
+volume={63}, 
+address={Paris}, 
+keywords={seclit},
+}
+
 @article{sandersonshaivaexe,
 author= {Sanderson, Alexis}, 
 journal= {Mélanges tantriques à la mémoire d’Hélène Brunner / Tantric Studies in Memory of Hélène Brunner}, 
-editor= {Goodall, Dominic and Padoux André}, 
+editor= {Goodall, Dominic and Padoux, André}, 
 year={2007}, 
 title={Śaiva Exegesis of Kashmir}, 
 publisher={Institut français d'Indologie/ École française d’Extrême-Orient}, 
@@ -1621,6 +1669,15 @@ keywords={seclit},
    note={NAK MS 3–370, NGMPP Reel No. A 42/6. Palm-leaf, Script: Nevārī},
    keywords={codex},
 }
+
+@codex{yogacintamanilahore,
+   title={Yogacintāmani},  
+   author={Śivānandasarasvatī},
+   address={Panjab University Library Lahore},
+   note={Ms. no. 6922 dated śaka 1552},
+   keywords={codex},
+}
+
 
 @codex{stb1,
    title={Siddhāntatattvabindu},
@@ -2125,6 +2182,12 @@ subtitle={The Niśvāsatattvasaṃhitā: The Earliest Surviving Śaiva Tantra},
 
 @book{yogakundalinyopanisad,
    title={Yogakuṇḍalinyopaniṣad},
+   note={see Yoga Upaniṣads}, 
+   keywords={printsource},
+}
+
+@book{yogasikhopanisad,
+   title={Yogaśikhopaniṣad},
    note={see Yoga Upaniṣads}, 
    keywords={printsource},
 }
