--- a/voredition.tex
+++ b/voredition.tex
@@ -83,6 +83,21 @@
 %Franz
 %Franz Veit
 %fj.veit@gmail.com
+
+\chapter{Dankesagung}
+Dominic Haas! Danke!
+Shaman Hatley! Danke!
+Dominik Goodall! Danke!
+Jim
+Jasom
+Mitsuyo
+Jüprgen
+Max!!!!
+Bastian!
+Roland Steiner
+Kolloquium
+allen MArburgern
+
 \chapter{Introduction}
 \mainmatter
 
@@ -176,6 +191,17 @@ the Amanaska’s South Indian recension (but not the North Indian and
 Nepalese) as well as the South Indian redactions of the Advayatårako-
 pani‚at and Ma~alabråhma~opani‚at.
 
+\section{mantrayoga}
+
+ganz wichtig! siehe Yogabīja (working ed von jason) 106 und 107:
+
+107 vor allem: guruvākyāt suṣuṃṇāyāṃ viparīto bhavej japaḥ
+so 'haṃ so ham iti prāpte mantrayogaḥ tadocyate
+
+"From the teacher's words, let there arise a reverse repetition in Suṣumnā. When the realization 'I am that, I am that' is attained, it is called Mantra Yoga."
+
+
+also in the Yogaśikhopaniṣad Mantrayoga is declared to be so ham ham so (cf. Translation p. 352) und (cf. Edition p. 458 (in pdf)) 
 \chapter{Uncovering the Fundamental Teachings of Yogatattvabindu: A Textual Network}
 
 \begin{itemize}
@@ -217,7 +243,10 @@ see Netra tantra Intro Bäumer p.43 ff
 Analyse the additions of U\textsubscript{2} and present the \textit{cakra}s and their attriubutes in a table .
 \begin{itemize}
 \item  Muktabodha-Texte sehe ich 3 Belege für bahiśśakti Muktabodha/krīyakramādyotikā.html 2938 suṣirānte bahiśśaktiṃ vinyasedvyomarūpiṇīm | tasyā madhye tu Muktabodha/sakalāgamasārasaṅgraha.html 2186 suṣirāntabahiśśaktiṃ vyāpinīṃ cintayet tataḥ || Muktabodha/kriyakramadyotikavyākhyā.html 1846 tanmadhye ca bahiśśaktiṃ sudhābindu parisrutim
-  \item  Parā\footnote{Im Kaśm. Śiv. °das ewige Wort, in welchem potentiell alle Begriffe und Worte ruhen; vgl. das śabdabrahma des Vyākaraṇa. [B.]― Schmidt S. 246}.
+\item  Parā\footnote{Im Kaśm. Śiv. °das ewige Wort, in welchem potentiell alle Begriffe und Worte ruhen; vgl. das śabdabrahma des Vyākaraṇa. [B.]― Schmidt S. 246}.
+\item additional material was probably side notes text surrounding text that was incorporated into the main text by the scribe
+\item main structure of the attributions are two nominatives that refer to each other. In many other cases we have a karmadhāraya compound of two substantives refering to each other as a correspondence
+  \item note that the additions are very difficult material and sometimes har dto make sense of this is why several places had to be cruxed and only tentative translations were provided. 
   \end{itemize}
 
 \chapter{Conventions in the Critical Apparatus}
