--- a/bindu.bib
+++ b/bindu.bib
@@ -731,6 +731,18 @@ Sound},
   keywords={printsource},
   }
 
+
+@online{mallinsononline2013,
+  editor={Mallinson, James},
+  title={Yogic Identities: Tradition and Transformation},
+  year={2013},
+  date={2024-01-16},
+  publisher={Smithonian Institution, Freer Gallery of Art & Arthur M. Sackler Gallery, Smithsonian’s National Museum of Asian Art}, 
+  address={Washington D.C.},
+  url={https://web.archive.org/web/20240116124707/https://asia-archive.si.edu/essays/yogic-identities/},
+  keywords={seclit},
+  }
+
 @book{feuerstein2008,
   title={Die Yoga Tradition: Geschichte, Literatur, Philosophie und Praxis},
   author={Feuerstein, Georg},
